fixed credentials2 layout problem on windows chrome

--- a/projects/server/carousel/css/index.css
+++ b/projects/server/carousel/css/index.css
@@ -344,7 +344,7 @@ body > div#meeting > div#streams > div#scontrols > input.right {
 }
 #boxes #credentials2 {
   width: 300px; 
-  height: 220px;
+  height: auto;
   padding: 0px 7px 7px 7px;
   background-color: #eeeeee;
   border: 4px solid #812034;
@@ -352,6 +352,7 @@ body > div#meeting > div#streams > div#scontrols > input.right {
 }
 #boxes #credentials2 > p.title {
   margin-left: 10px;
+  margin-bottom: 10px;
 }
 #boxes #credentials2 input#name {
   width: 15em;
